<resources>
    <string name="app_name">Byte</string>

    <!--Splash Screen Activity-->
    <string name="from">FROM</string>
    <string name="author_name">BHARDWAJ</string>
    <string name="content_description_logo">Company Logo - Byte</string>

    <!-- Welcome Screen 1-->
    <string name="welcome_message">Welcome to Byte Messenger</string>
    <string name="terms_n_conditions">Read our Privacy Policy. Tap "Agree and continue" to accept Terms of Services.</string>
    <string name="accept_and_continue">Agree and Continue</string>

    <!-- Welcome Screen 2-->
    <string name="heading_phone_number">Enter your phone number</string>
    <string name="verify_number">Byte messenger will send an SMS message to verify your phone number.</string>
    <string name="phone_number">phone number</string>
    <string name="sms_charges_notify">Carrier SMS charges may apply</string>
    <string name="button_next">Next</string>
    <string name="default_country_code">+91</string>

    <!-- Welcome Screen 3-->
    <string name="button_confirm">Confirm</string>
    <string name="auto_otp_select">Waiting to automatically detect an SMS sent to</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="default_otp">— — — — — —</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="resend_sms">Resend SMS</string>

    <!-- Welcome Screen 4-->
    <string name="provide_photo">Please provide your name and an optional profile photo</string>
    <string name="profile_info">Profile info</string>
    <string name="type_name">Type your name Here</string>

    <!--Menus-->
    <string name="menu_search">Search</string>
    <string name="new_group">New Group</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="byte_web">Byte Web</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_more">More</string>

    <!--Content Descriptions-->
    <string name="content_description_fab">Different Action on Different Fragments.</string>
    <string name="content_description_user_image">User Profile Pic</string>
    <string name="content_description_add_status">Set Status Button</string>
    <string name="content_description_call_type_indicator">Call Type Indicator</string>
    <string name="content_description_call_button">Call Button</string>
    <string name="content_description_more_button">More Button</string>
    <string name="content_description_settings">Settings</string>
    <string name="content_description_voice_message">Voice Message</string>

    <!-- Status Fragment -->
    <string name="my_status">My Status</string>
    <string name="tap_to_add_status_update">Tap to add status update</string>

    <!-- Chats Fragment -->
    <string name="invite_subheading">None of your contacts are using Byte Messenger. Invite them using below Button.</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="tap_to_chat">Tap to chat</string>

    <!-- Call Fragment -->
    <string name="place_call">To place a Byte voice or video call, tap 📞 button and select a contact.</string>

    <!--Settings Activity-->
    <string name="account">Account</string>
    <string name="privacy">Privacy, Security, Change Number</string>
    <string name="chats">Chats</string>
    <string name="themes">Themes, Wallpapers, Chat History</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages, Groups, Call Tones</string>
    <string name="usage">Data and Storage Usage</string>
    <string name="network_usage">Network Usage, Auto-Download</string>
    <string name="help">Help</string>
    <string name="contact_us">FAQ, Contact Us, Privacy Policy</string>
    <string name="invite_settings">Invite a Friend</string>

    <!-- Profile Activity -->
    <string name="name">Name</string>
    <string name="not_a_username">This is not your username or pin. This name will be visible to Byte Contacts.</string>
    <string name="about">About</string>
    <string name="phone">Phone</string>
    <string name="profile_photo">Profile photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="enter_name">Enter your Name</string>
    <string name="bio">Enter your Bio</string>
    <string name="enter_bio">Here goes the Bio…</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile_heading">Profile Info</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="type_message">Type a message</string>
    <string name="mute_notification">Mute notification</string>
    <string name="custom_notification">Custom notification</string>
    <string name="media_visibility">Media visibility</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="block">Block</string>
    <string name="report_contact">Report contact</string>
</resources>