<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".fragment.StatusFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.cardview.widget.CardView
        android:id="@+id/single_user_status_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="0dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_user_image"
            android:scaleType="centerCrop"
            android:src="@drawable/image_default_user" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_add_status"
        android:elevation="10dp"
        android:scaleType="center"
        android:src="@drawable/icon_add"
        app:layout_constraintBottom_toBottomOf="@id/single_user_status_container"
        app:layout_constraintEnd_toEndOf="@id/single_user_status_container" />

    <TextView
        android:id="@+id/my_status_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/my_status"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/single_user_status_container"
        app:layout_constraintTop_toTopOf="@id/single_user_status_container" />

    <TextView
        android:id="@+id/status_description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tap_to_add_status_update"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/single_user_status_container"
        app:layout_constraintTop_toBottomOf="@id/my_status_text" />
</androidx.constraintlayout.widget.ConstraintLayout>